fix spacing

--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ body {
 .column-tip {
     padding-right: 0%;
     position: relative;
-    width: 75%;
+    width: 65%;
     float: left;
 }
 
